<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/three"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.eric.taskapp.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcomeMessage"
        android:fontFamily="cursive"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:textSize="80dp"
        android:layout_marginBottom="50dp"

        />

    <Button

        android:onClick="onButtonClicked"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:background="@color/yellow"
        android:text="@string/mainButton"
        android:textStyle="bold"
        android:textSize="30dp"

        />

    <Button

        android:onClick="onTasksButtonClicked"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:background="@color/yellow"
        android:text="@string/mainViewTasksButton"
        android:textStyle="bold"
        android:textSize="30dp"

        />
</LinearLayout>

